# miso

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.json  justfile  opencode-agent-blueprint.md
.config/: nextest.toml
.github/workflows/: rust.yml
benches/: join.rs  sort.rs
miso-common/: Cargo.toml
miso-common/src/: bytesize_utils.rs  hashmap_macro.rs  humantime_utils.rs  lib.rs  metrics.rs  query_id_layer.rs  rand.rs  run_at_interval.rs  time_utils.rs  watch.rs
miso-connectors/: Cargo.toml
miso-connectors/src/: elasticsearch.rs  instrumentation.rs  lib.rs  memory.rs  quickwit.rs  splunk.rs  stats.rs
miso-connectors/src/splunk/: mod.rs  preview_poller.rs  query_runner.rs
miso-kql/: Cargo.toml
miso-kql/src/: lexer.rs  lexer_tests.rs  lib.rs  parser.rs  parser_tests.rs
miso-optimizations/: Cargo.toml
miso-optimizations/src/: convert_sort_limit_to_topn.rs  dynamic_filter.rs  eliminate_unused_fields.rs  field_replacer.rs  filter_propagation.rs  fold_rename_into_project.rs  invert_branch_filter.rs  lib.rs  merge_consecutive_extends.rs  merge_consecutive_projects.rs  merge_filters_into_and_filter.rs  merge_topns.rs  mux_into_union.rs  pattern.rs  project_propagation.rs  push_count_into_scan.rs  push_either_project_extend_rename_into_scan.rs  push_filter_into_join.rs  push_filter_into_scan.rs  push_into_scan.rs  push_join_into_scan.rs  push_limit_into_limit.rs  push_limit_into_scan.rs  push_limit_into_topn.rs  push_project_into_join.rs  push_project_or_extend_into_scan.rs  push_steps_into_union.rs  push_summarize_into_scan.rs  push_topn_into_scan.rs  push_union_into_scan.rs  remove_no_op_filter.rs  remove_redundant_empty_steps.rs  remove_redundant_sort_before_topn.rs  remove_redundant_sorts_before_aggregation.rs  remove_redundant_sorts_before_count.rs  remove_redundant_steps_before_aggregation.rs  remove_redundant_steps_before_count.rs  reorder_filter_before_sort.rs  reorder_steps_before_mux.rs  short_circuit_false_filter.rs  (+4 more)
miso-optimizations/src/const_folding/: mod.rs  partial_evaluator.rs
miso-optimizations/src/project_propagation/: expr_substitude.rs  mod.rs
miso-optimizations/src/push_into_scan/: case_transformer.rs  mod.rs
miso-server/: Cargo.toml  field_replacer.rs
miso-server/src/: config.rs  http_server.rs  init_connectors.rs  lib.rs  query_status.rs  query_to_workflow.rs
miso-tui/: Cargo.toml
miso-tui/src/: app.rs  client.rs  common.rs  log.rs  main.rs  text_buffer.rs
miso-tui/src/components/: error_modal.rs  footer.rs  kql_syntax_highlight.rs  log_view.rs  mod.rs  query_input.rs  results_list.rs  results_with_preview.rs
miso-workflow/: Cargo.toml
miso-workflow-types/: Cargo.toml
miso-workflow-types/src/: expand.rs  expr.rs  expr_subst.rs  expr_visitor.rs  field.rs  field_tests.rs  filter.rs  join.rs  lib.rs  log.rs  project.rs  query.rs  sort.rs  summarize.rs
miso-workflow-types/src/value/: macros.rs  mod.rs  tests.rs
miso-workflow/src/: arrow_sort.rs  arrow_sort_final.rs  arrow_sort_optimized.rs  arrow_sort_v2.rs  count.rs  display.rs  expand.rs  filter.rs  join.rs  lib.rs  limit.rs  limits.rs  log_iter_creator.rs  log_utils.rs  memory_size.rs  partial_stream.rs  partial_stream_tracker.rs  project.rs  rename.rs  scan.rs  send_once.rs  serde_json_utils.rs  sort.rs  spawn_thread.rs  summarize.rs  tee.rs  test_utils.rs  tests.rs  topn.rs  type_tracker.rs  union.rs  write.rs
miso-workflow/src/interpreter/: expr_eval.rs  log_interpreter.rs  mod.rs  string_ops.rs  tests.rs
scripts/: run_opensearch.sh  run_quickwit.sh  run_splunk.sh
src/: args.rs  ast.rs  cancel_iter.rs  connector.rs  connector_stats.rs  elasticsearch.rs  filter.rs  http_client.rs  http_server.rs  lib.rs  log.rs  main.rs  metrics.rs  project.rs  quickwit_connector.rs  run_at_interval.rs  send_once.rs  shutdown_future.rs  spawn_thread.rs  thread_pool.rs  vrl_utils.rs  watch.rs
src/connectors/: mod.rs  quickwit.rs  stats.rs
src/connectors/tests/: quickwit.rs
src/optimizations/: convert_sort_limit_to_topn.rs  dynamic_filter.rs  merge_filters_into_and_filter.rs  merge_topn_limit.rs  mod.rs  mux_into_union.rs  pattern.rs  push_count_into_scan.rs  push_filter_and_limit_into_union.rs  push_filter_before_sort.rs  push_filter_into_scan.rs  push_filter_into_union.rs  push_limit_into_limit.rs  push_limit_into_scan.rs  push_limit_into_topn.rs  push_limit_into_union.rs  push_limit_or_topn_into_union.rs  push_steps_into_union.rs  push_stuff_into_inner_queries.rs  push_stuff_into_union.rs  push_summarize_into_scan.rs  push_summarize_into_union.rs  push_topn_into_limit.rs  push_topn_into_scan.rs  push_union_into_scan.rs  remove_redundant_sorts_before_count.rs  reorder_filter_before_sort.rs  reorder_steps_before_mux.rs  sort_limit_to_topn.rs  split_scan_to_union.rs  tests.rs
src/tests/: mod.rs  quickwit.rs
src/tests/resources/: stackoverflow.posts.10.json
src/workflow/: count.rs  display.rs  filter.rs  interpreter.rs  jit.rs  join.rs  limit.rs  mod.rs  partial_stream.rs  project.rs  scan.rs  serde_json_utils.rs  sort.rs  sortable_value.rs  summarize.rs  tests.rs  topn.rs  vrl_utils.rs
src/workflow/interpreter/: mod.rs  string_ops.rs
tests/: elasticsearch.rs  query_status.rs  quickwit.rs  splunk.rs
tests/common/: mod.rs  predicate_pushdown.rs  test_cases.rs  test_context_layer.rs
tests/resources/: hdfs.logs.10.json
