[package]
name = "miso"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[profile.release]
strip = "none"
lto = true
panic = "abort"

[profile.release-thin-lto]
inherits = "release"
lto = "thin"

[dependencies]
async-recursion = "1.1.1"
async-stream = "0.3.6"
axum = { version = "0.7.7", features = ["macros"] }
bytes = "1.10.1"
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = { version = "0.6.3", default-features = false }
flume = "0.11.1"
futures-util = "0.3.31"
hashbrown = "0.15.3"
humantime = "2.1.0"
kinded = "0.3.0"
memchr = "2.7.5"
mimalloc = "0.1.46"
once_cell = "1.21.3"
parking_lot = "0.12.3"
prometheus = "0.14.0"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
scoped_thread_local = "1.0.0"
scopeguard = "1.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
simd-json = "0.15.1"
thiserror = "2.0.12"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
typetag = "0.2.18"
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[dev-dependencies]
bon = "3.6.3"
collection_macros = "0.2.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
ctor = "0.2.9"
test-case = "3.3.1"
testcontainers = { version = "0.23.3", features = ["blocking"] }
tokio-retry = "0.3.0"
tokio-test = "0.4.4"

[[bench]]
name = "join"
harness = false
