[package]
name = "miso"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "3"
members = [
    "miso-common",
    "miso-connectors",
    "miso-kql",
    "miso-optimizations",
    "miso-server",
    "miso-tui",
    "miso-workflow",
    "miso-workflow-types",
]

[workspace.dependencies]
arboard = "3.6.1"
async-stream = "0.3.6"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22.1"
bon = "3.6.3"
bytes = "1.10.1"
chumsky = { version = "0.10.1", default-features = false, features = ["std"] }
clap = { version = "4.5.20", features = ["derive"] }
collection_macros = "0.2.0"
color-eyre = { version = "0.6.3", default-features = false }
criterion = { version = "0.5.1", features = ["async_tokio"] }
crossbeam-utils = "0.8.21"
crossterm = "0.29.0"
ctor = "0.2.9"
flume = "0.11.1"
futures-lite = "2.6.1"
futures-util = "0.3.31"
hashbrown = { version = "0.15.3", features = ["serde"]}
humantime = "2.1.0"
kinded = "0.3.0"
logos = "0.15.0"
memchr = "2.7.5"
mimalloc = "0.1.46"
miso-common = { path = "miso-common" }
miso-connectors = { path = "miso-connectors" }
miso-kql = { path = "miso-kql" }
miso-optimizations = { path = "miso-optimizations" }
miso-server = { path = "miso-server" }
miso-workflow = { path = "miso-workflow" }
miso-workflow-types = { path = "miso-workflow-types" }
once_cell = "1.21.3"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
parking_lot = "0.12.3"
prometheus = { version = "0.14.0", default-features = false }
ratatui = "0.29.0"
rayon = "1.10.0"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
scoped_thread_local = "1.0.0"
scopeguard = "1.2.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
simd-json = "0.15.1"
test-case = "3.3.1"
testcontainers = { version = "0.23.3", features = ["blocking"] }
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-test = "0.4.4"
tokio-util = "0.7.15"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
typetag = "0.2.18"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[lib]
doctest = false

[dependencies]
axum.workspace = true
clap.workspace = true
color-eyre.workspace = true
mimalloc.workspace = true
miso-common.workspace = true
miso-server.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
collection_macros.workspace = true
criterion.workspace = true
ctor.workspace = true
flume.workspace = true
futures-util.workspace = true
humantime.workspace = true
miso-connectors.workspace = true
miso-kql.workspace = true
miso-optimizations.workspace = true
miso-server.workspace = true
miso-workflow.workspace = true
miso-workflow-types.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tokio-retry.workspace = true
tokio-test.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[profile.release]
strip = "none"
lto = true
panic = "abort"

[profile.release-thin-lto]
inherits = "release"
lto = "thin"

[profile.dev]
# faster compile and link times, smaller binaries, but no local variable inspection in debuggers.
debug = "line-tables-only"
# faster rebuilds after small changes, at the cost of extra disk usage.
incremental = true

[[bench]]
name = "join"
harness = false

