[package]
name = "miso-common"
version = "0.1.0"
edition = "2024"

[dependencies]
bytesize.workspace = true
humantime.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
time.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
