[package]
name = "miso-optimizations"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre.workspace = true
hashbrown.workspace = true
miso-common.workspace = true
miso-workflow.workspace = true
miso-workflow-types.workspace = true

[dev-dependencies]
hashbrown.workspace = true
test-case.workspace = true
