[package]
name = "miso-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream.workspace = true
axum.workspace = true
color-eyre.workspace = true
futures-util.workspace = true
hashbrown.workspace = true
miso-common.workspace = true
miso-connectors.workspace = true
miso-kql.workspace = true
miso-optimizations.workspace = true
miso-workflow.workspace = true
miso-workflow-types.workspace = true
prometheus.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
