[package]
name = "miso-workflow"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow.workspace = true
async-stream.workspace = true
bytesize.workspace = true
color-eyre.workspace = true
crossbeam-utils.workspace = true
flume.workspace = true
futures-lite.workspace = true
futures-util.workspace = true
hashbrown.workspace = true
kinded.workspace = true
memchr.workspace = true
miso-common.workspace = true
miso-connectors.workspace = true
miso-workflow-types.workspace = true
parking_lot.workspace = true
rayon.workspace = true
regex.workspace = true
scoped_thread_local.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
bon.workspace = true
ctor.workspace = true
miso-kql.workspace = true
miso-optimizations.workspace = true
miso-server.workspace = true
miso-workflow.workspace = true
test-case.workspace = true
tracing-subscriber.workspace = true
typetag.workspace = true
